@@ -65,7 +65,7 @@ push_to     = github master
 
 [AutoPrereqs]
 skip = ^(?:constant|lib|strict|utf8|vars|warnings)$
-skip = ^(?:HTML::FormatText|LWP::UserAgent|Test::Fatal|URI::file)$
+skip = ^(?:HTML::FormatText|LWP::UserAgent|URI::file)$
 
 [MetaNoIndex]
 dir = inc
